@@ -13,11 +13,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
+                    <compilerArgs>--enable-preview</compilerArgs>
                     <source>16</source>
                     <target>16</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                    <compilerArgs>--add-modules jdk.incubator.foreign</compilerArgs>
-                    <compilerArgs>-Dforeign.restricted=permit</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
